--- a/css/index.css
+++ b/css/index.css
@@ -1,58 +1,1 @@
-@-webkit-keyframes fa-spin{
-	0%{
-		-webkit-transform:rotate(0deg);
-		transform:rotate(0deg);
-	}
-	100%{
-		-webkit-transform:rotate(359deg);
-		transform:rotate(359deg);
-	}
-}
-@keyframes fa-spin{
-	0%{
-		-webkit-transform:rotate(0deg);
-		transform:rotate(0deg);
-	}
-	100%{
-		-webkit-transform:rotate(359deg);
-		transform:rotate(359deg);
-	}
-}
-.u-inputField{
-	display:inline-block;
-	position:relative;
-}
-.u-inputField .inputField_unit{
-	position:relative;
-	right:40px;
-}
-.u-inputField .inputField_placeholder{
-	position:absolute;
-	left:0;
-	top:0;
-	bottom:0;
-}
-.u-inputField .inputField_placeholder{
-	color:#bbb;
-	padding:6px 14px;
-	border-left:1px solid transparent;
-}
-.u-inputField .u-tip{
-	margin-left:4px;
-}
-.u-textField{
-	display:inline-block;
-	position:relative;
-}
-.u-textField .textField_placeholder{
-	position:absolute;
-	left:0;
-	right:0;
-	top:0;
-	bottom:0;
-}
-.u-textField .textField_placeholder{
-	color:#bbb;
-	padding:6px 14px;
-	border-left:1px solid transparent;
-}
+.u-inputField .inputField_placeholder,.u-textField .textField_placeholder{left:0;top:0;bottom:0;color:#bbb;padding:6px 14px;border-left:1px solid transparent}@-webkit-keyframes fa-spin{0%{-webkit-transform:rotate(0);transform:rotate(0)}100%{-webkit-transform:rotate(359deg);transform:rotate(359deg)}}@keyframes fa-spin{0%{-webkit-transform:rotate(0);transform:rotate(0)}100%{-webkit-transform:rotate(359deg);transform:rotate(359deg)}}.u-inputField{display:inline-block;position:relative}.u-inputField .inputField_unit{position:relative;right:40px}.u-inputField .inputField_placeholder{position:absolute}.u-inputField .u-tip{margin-left:4px}.u-textField{display:inline-block;position:relative}.u-textField .textField_placeholder{position:absolute;right:0}
